* Don't use credentials fixtures in local tests [cody]